--- a/public/short-pop-up.html
+++ b/public/short-pop-up.html
@@ -6,7 +6,7 @@
             <p class="long-element"> Short content- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                 incididunt ut labore et
                 dolore magna aliqua</p>
-            <button href="#" class="pop-up-ok">Ok!</button>
+            <button href="#" class="pop-up-ok">Toggle!</button>
         </div>
     </div>
 </div>
