--- a/public/long-pop-up.html
+++ b/public/long-pop-up.html
@@ -217,7 +217,7 @@
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                 pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
                 id....</p>
-            <button href="#" class="pop-up-ok">Ok!</button>
+            <button href="#" class="pop-up-ok">Toggle!</button>
         </div>
     </div>
 </div>
